<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >


        <EditText android:id="@+id/name_editBox"
            android:hint="@string/name_hint"
            style="@style/HeaderTextStyle"/>
        <TextView
            android:text="@string/topping_textView"
            style="@style/HeaderTextStyle"
            />
        <CheckBox
            android:id="@+id/cream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wipped_cream_checkBox"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:paddingLeft="24dp"/>
        <CheckBox
            android:id="@+id/choclate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choclate_checkBox"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:paddingLeft="24dp"/>


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity_textBox"


            />\
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"
                android:onClick="decrement"/>
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"

                />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:textSize="16sp"


                android:onClick="increment"/>


        </LinearLayout>

        <TextView

            android:text="@string/order_summary_textView"
            style="@style/HeaderTextStyle"
            />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_Button"
            android:layout_margin="16dp"
            android:onClick="submitOrder"
            />

    </LinearLayout>
</ScrollView>